Basic cli command structure in place.

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,6 +2,7 @@
 # Ignore for 3rd party packages without type info
 ignore_missing_imports = True
 strict = True
+disallow_untyped_decorators = False
 
 [mypy-.venv.*]
 # Ignore .venv
