--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,15 @@ packages = [
     {include = "pytoil"}
 ]
 
+[tool.poetry.scripts]
+pytoil = "pytoil.cli:app"
+
 [tool.poetry.urls]
 "Documentation" = "https://FollowTheProcess.github.io/pytoil/"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+typer = {extras = ["all"], version = "^0.3.2"}
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0"
@@ -48,6 +52,7 @@ multi_line_output = 3
 
 [tool.coverage.run]
 omit = ["*__init__.py"]
+branch = true
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
