--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytoil = "pytoil.cli:app"
 [tool.poetry.dependencies]
 python = "^3.7"
 typer = {extras = ["all"], version = "^0.3.2"}
+virtualenv = "^20.4.2"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0"
@@ -44,6 +45,7 @@ mypy = ">=0.800"
 mkdocs = "^1.1"
 mkdocs-material = "^6.2"
 mkdocstrings = "^0"
+pytest-mock = "^3.5.1"
 
 [tool.isort]
 # Added for compatability with black
@@ -51,7 +53,7 @@ profile = "black"
 multi_line_output = 3
 
 [tool.coverage.run]
-omit = ["*__init__.py"]
+omit = ["*__init__.py", "*exceptions.py"]
 branch = true
 
 [build-system]
