--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ profile = "black"
 multi_line_output = 3
 
 [tool.coverage.run]
-omit = ["*__init__.py", "*exceptions.py"]
+omit = ["*__init__.py", "*exceptions.py", "*__main__.py"]
 branch = true
 
 [build-system]
