Flesh out CLI a bit more

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ python = "^3.7"
 typer = {extras = ["all"], version = "^0.3.2"}
 virtualenv = "^20.4.2"
 PyYAML = "^5.4.1"
+cookiecutter = "^1.7.2"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0"
