--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ typer = {extras = ["all"], version = "^0.3.2"}
 virtualenv = "^20.4.2"
 PyYAML = "^5.4.1"
 cookiecutter = "^1.7.2"
+urllib3 = "^1.26.3"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0"
