--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ profile = "black"
 multi_line_output = 3
 
 [tool.coverage.run]
-omit = ["*__init__.py", "*exceptions.py", "*__main__.py"]
+omit = ["*__init__.py", "*exceptions.py", "*__main__.py", "*cli.py"]
 branch = true
 
 [build-system]
