Add project list command to cli

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,8 +29,17 @@ markdown_extensions:
       base_path: docs
   - pymdownx.highlight:
       use_pygments: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.inlinehilite
-  - pymdownx.superfences
+  - admonition
+  - extra
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_div_format
   - pymdownx.details
   - pymdownx.tabbed
   - toc:
