--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -90,7 +90,7 @@ jobs:
           mkdocs gh-deploy -v --clean --remote-name gh-token;
 
   deploy:
-    needs: [build, lint, docs]
+    needs: [build, lint, docs, publish-docs]
     runs-on: ubuntu-latest
 
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
