Correct deploy docs CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,6 +79,7 @@ jobs:
           python3 -m pip install --upgrade pip setuptools wheel
           python3 -m pip install nox
           python3 -m pip install poetry
+          poetry install
 
       - name: Deploy Docs to GitHub Pages
         env:
