--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,22 @@ homepage = "https://github.com/FollowTheProcess/pytoil"
 description = "CLI to automate the development workflow."
 authors = ["Tom Fleet <tomfleet2018@gmail.com>"]
 readme = "README.md"
-keywords = [""]
+keywords = ["cli", "python", "developer-tools", "automation"]
 license =  "Apache Software License 2.0"
 classifiers = [
     "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: Software Development",
+    "Topic :: Utilities",
+    "Typing :: Typed",
 ]
 packages = [
     {include = "pytoil"}
