--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,7 @@
 current_version = 0.1.0
 commit = True
 tag = True
+sign_tags = True
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
