--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -11,6 +11,7 @@ jobs:
         python-version: [3.8, 3.9]
 
     steps:
+      - name: Checkout Code
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -25,10 +26,31 @@ jobs:
       - name: Run Tests
         run: nox --non-interactive --session "test-${{ matrix.python-version }}"
 
+  coverage:
+    needs: tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install Dependencies
+        run: |
+          python3 -m pip install --upgrade pip setuptools wheel
+          python3 -m pip install nox
+          python3 -m pip install poetry
+
+      - name: Run Tests
+        run: nox --non-interactive --session "coverage"
+
   lint:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
       - uses: actions/checkout@v2
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
@@ -47,6 +69,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
       - uses: actions/checkout@v2
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
