Make makefile more friendly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pytoil = "pytoil.cli.main:app"
 
 [tool.poetry.urls]
 "Documentation" = "https://FollowTheProcess.github.io/pytoil/"
+"Source" = "https://github.com/FollowTheProcess/pytoil"
 
 [tool.poetry.dependencies]
 python = "^3.8"
