--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,32 @@ jobs:
           release_name: ${{ github.ref }}
           draft: false
           prerelease: false
+
+  publish-docs:
+    needs: docs
+    runs-on: ubuntu-latest
+
+    # Only publish docs from main
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install Dependencies
+        run: |
+          python3 -m pip install --upgrade pip setuptools wheel
+          python3 -m pip install nox
+          python3 -m pip install poetry
+          poetry install
+
+      - name: Deploy Docs to GitHub Pages
+        env:
+          # Use the built in CI GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git remote add gh-token "https://${GITHUB_TOKEN}@github.com/FollowTheProcess/pytoil.git";
+          git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
+          poetry run mkdocs gh-deploy -v --clean --remote-name gh-token;
