--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   release:
+    needs: CI
     runs-on: ubuntu-latest
 
     steps:
@@ -38,7 +39,6 @@ jobs:
           prerelease: false
 
   publish-docs:
-    needs: docs
     runs-on: ubuntu-latest
 
     # Only publish docs from main
