--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,66 +1,6 @@
-[tool]
-[tool.poetry]
-name = "pytoil"
-version = "0.4.0"
-homepage = "https://github.com/FollowTheProcess/pytoil"
-description = "CLI to automate the development workflow."
-authors = ["Tom Fleet <tomfleet2018@gmail.com>"]
-readme = "README.md"
-keywords = ["cli", "python", "developer-tools", "automation"]
-license =  "Apache Software License 2.0"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "Natural Language :: English",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "License :: OSI Approved :: Apache Software License",
-    "Operating System :: MacOS :: MacOS X",
-    "Operating System :: POSIX :: Linux",
-    "Topic :: Software Development",
-    "Topic :: Utilities",
-    "Typing :: Typed",
-]
-packages = [
-    {include = "pytoil"}
-]
-
-include = ["pytoil/py.typed", "LICENSE", "README.md", "pyproject.toml"]
-
-[tool.poetry.scripts]
-pytoil = "pytoil.cli.main:app"
-
-[tool.poetry.urls]
-"Documentation" = "https://FollowTheProcess.github.io/pytoil/"
-"Source" = "https://github.com/FollowTheProcess/pytoil"
-
-[tool.poetry.dependencies]
-python = "^3.8"
-typer = {extras = ["all"], version = "^0.3.2"}
-virtualenv = "^20.4.2"
-PyYAML = "^5.4.1"
-cookiecutter = "^1.7.2"
-httpx = "^0.16.1"
-
-[tool.poetry.dev-dependencies]
-bump2version = "^1.0"
-black = "^20.8b1"
-nox = "^2020.12.31"
-mypy = "^0.812"
-flake8 = "^3.8"
-isort = "^5.6"
-pytest = "^6.1"
-pytest-cov = "^2.10"
-coverage = {version = "^5.3", extras = ["toml"]}
-coverage-badge = "^1.0"
-mkdocs = "^1.1"
-mkdocs-material = "^7.1"
-mkdocstrings = "^0"
-pytest-mock = "^3.5.1"
-markdown-include = "^0.6.0"
-pytest-httpx = "^0.10.1"
+[build-system]
+requires = ["setuptools>=50.3.2", "wheel>=0.35.1"]
+build-backend = "setuptools.build_meta"
 
 [tool.isort]
 # Added for compatability with black
@@ -76,7 +16,3 @@ omit = [
     "pytoil/cli/*"
 ]
 branch = true
-
-[build-system]
-requires = ["poetry_core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
