--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -112,14 +112,20 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
 
+      - name: Generate GitHub Release Changelog
+        run: sh .github/scripts/changelog.sh > ${{ github.workflow }}_CHANGELOG.md
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: FollowTheProcess/pytoil
         with:
           tag_name: ${{ github.ref }}
           name: ${{ github.ref }}
+          body_path: ${{ github.workflow }}_CHANGELOG.md
           draft: false
           prerelease: false
+          fail_on_unmatched_files: true
           files: |
             dist/*
