Add build requirement and makefile target

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ console_scripts =
 [options.extras_require]
 dev = 
     bump2version>=1.0.1
+    build>=0.3.1
     flake8>=3.8.4
     isort>=5.6.4
     nox>=2020.8.22
