Add classifiers back in from port away from poetry

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,12 +13,21 @@ url = https://github.com/FollowTheProcess/pytoil
 author = Tom Fleet
 author_email = tomfleet2018@gmail.com
 license = Apache Software License 2.0
+keywords = cli, python, developer-tools, automation
 classifiers =
     Development Status :: 3 - Alpha
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Operating System :: MacOS :: MacOS X
+    Operating System :: POSIX :: Linux
+    Topic :: Software Development
+    Topic :: Utilities
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Typing :: Typed
 test_suite = tests
 project_urls = 
     Documentation = https://FollowTheProcess.github.io/pytoil/
@@ -96,7 +105,7 @@ exclude =
     .git,
     __pycache__,
     .pytest_cache,
-    .mpypy_cache,
+    .mypy_cache,
     venv/,
     .venv/,
     docs,
