--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ console_scripts =
 dev = 
     bump2version>=1.0.1
     build>=0.3.1
+    pre-commit>=2.12.0
     flake8>=3.8.4
     isort>=5.6.4
     nox>=2020.8.22
