Fix weird docs build fail

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ dev =
 	mkdocs-material>=6.2.2
 	mkdocstrings>=0.13.6
 	markdown-include>=0.6.0
+	livereload>=2.6.3
 test = 
 	pytest>=6.1.2
 	pytest-cov>=2.10.1
@@ -88,6 +89,7 @@ docs =
 	mkdocs-material>=6.2.2
 	mkdocstrings>=0.13.6
 	markdown-include>=0.6.0
+	livereload>=2.6.3
 lint = 
 	flake8>=3.8.4
 	isort>=5.6.4
