--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,3 @@
-[bumpversion]
-current_version = 0.4.2
-commit = True
-tag = True
-
 [metadata]
 name = pytoil
 version = attr: pytoil.__version__
@@ -12,113 +7,120 @@ long_description_content_type = text/markdown
 url = https://github.com/FollowTheProcess/pytoil
 author = Tom Fleet
 author_email = tomfleet2018@gmail.com
-license = Apache Software License 2.0
+license = Apache-2.0
+license_file = LICENSE
+classifiers =
+    Development Status :: 3 - Alpha
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Natural Language :: English
+    Operating System :: MacOS :: MacOS X
+    Operating System :: POSIX :: Linux
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Software Development
+    Topic :: Utilities
+    Typing :: Typed
 keywords = cli, python, developer-tools, automation
-classifiers = 
-	Development Status :: 3 - Alpha
-	Environment :: Console
-	Intended Audience :: Developers
-	License :: OSI Approved :: Apache Software License
-	Operating System :: MacOS :: MacOS X
-	Operating System :: POSIX :: Linux
-	Topic :: Software Development
-	Topic :: Utilities
-	Natural Language :: English
-	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.8
-	Programming Language :: Python :: 3.9
-	Typing :: Typed
+project_urls =
+    Documentation = https://FollowTheProcess.github.io/pytoil/
+    Source = https://github.com/FollowTheProcess/pytoil
 test_suite = tests
-project_urls = 
-	Documentation = https://FollowTheProcess.github.io/pytoil/
-	Source = https://github.com/FollowTheProcess/pytoil
 
 [options]
-zip_safe = False
 packages = find:
-include_package_data = true
+install_requires =
+    cookiecutter>=1.7.2
+    httpx>=0.16.1
+    pyYAML>=5.4.1
+    typer[all]>=0.3.2
+    virtualenv>=20.4.2
 python_requires = >=3.8
-install_requires = 
-	typer[all]>=0.3.2
-	virtualenv>=20.4.2
-	pyYAML>=5.4.1
-	cookiecutter>=1.7.2
-	httpx>=0.16.1
+include_package_data = true
+zip_safe = False
+
+[options.entry_points]
+console_scripts =
+    pytoil = pytoil.cli.main:app
+
+[options.extras_require]
+cov =
+    coverage>=5.3.1
+    coverage-badge>=1.0.1
+    toml>=0.10.2
+dev =
+    black>=20.8b1
+    build>=0.3.1
+    bump2version>=1.0.1
+    coverage-badge>=1.0.1
+    flake8>=3.8.4
+    isort>=5.6.4
+    livereload>=2.6.3
+    markdown-include>=0.6.0
+    mkdocs>=1.1.2
+    mkdocs-material>=6.2.2
+    mkdocstrings>=0.13.6
+    mypy>=0.800
+    nox>=2020.8.22
+    pre-commit>=2.12.0
+    pytest>=6.1.2
+    pytest-cov>=2.10.1
+    pytest-httpx>=0.10.1
+    pytest-mock>=3.5.1
+    twine>=3.2.0
+docs =
+    livereload>=2.6.3
+    markdown-include>=0.6.0
+    mkdocs>=1.1.2
+    mkdocs-material>=6.2.2
+    mkdocstrings>=0.13.6
+lint =
+    black>=20.8b1
+    flake8>=3.8.4
+    isort>=5.6.4
+    mypy>=0.800
+test =
+    coverage>=5.3.1
+    pytest>=6.1.2
+    pytest-cov>=2.10.1
+    pytest-httpx>=0.10.1
+    pytest-mock>=3.5.1
+    toml>=0.10.2
 
 [options.package_data]
 typed = pytoil/py.typed
 
-[options.entry_points]
-console_scripts = 
-	pytoil = pytoil.cli.main:app
-
-[options.extras_require]
-dev = 
-	bump2version>=1.0.1
-	build>=0.3.1
-	pre-commit>=2.12.0
-	flake8>=3.8.4
-	isort>=5.6.4
-	nox>=2020.8.22
-	black>=20.8b1
-	twine>=3.2.0
-	pytest>=6.1.2
-	pytest-cov>=2.10.1
-	pytest-mock>=3.5.1
-	pytest-httpx>=0.10.1
-	coverage-badge>=1.0.1
-	mypy>=0.800
-	mkdocs>=1.1.2
-	mkdocs-material>=6.2.2
-	mkdocstrings>=0.13.6
-	markdown-include>=0.6.0
-	livereload>=2.6.3
-test = 
-	pytest>=6.1.2
-	pytest-cov>=2.10.1
-	pytest-mock>=3.5.1
-	pytest-httpx>=0.10.1
-	coverage>=5.3.1
-	toml>=0.10.2
-cov = 
-	coverage>=5.3.1
-	coverage-badge>=1.0.1
-	toml>=0.10.2
-docs = 
-	mkdocs>=1.1.2
-	mkdocs-material>=6.2.2
-	mkdocstrings>=0.13.6
-	markdown-include>=0.6.0
-	livereload>=2.6.3
-lint = 
-	flake8>=3.8.4
-	isort>=5.6.4
-	black>=20.8b1
-	mypy>=0.800
+[bumpversion]
+current_version = 0.4.2
+commit = True
+tag = True
 
 [bumpversion:file:pytoil/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [flake8]
-exclude = 
-	.git,
-	__pycache__,
-	.pytest_cache,
-	.mypy_cache,
-	venv/,
-	.venv/,
-	docs,
-	site,
-	.nox,
-	*.egg,
-	*.egg-info,
-	build
+exclude =
+    .git,
+    __pycache__,
+    .pytest_cache,
+    .mypy_cache,
+    venv/,
+    .venv/,
+    docs,
+    site,
+    .nox,
+    *.egg,
+    *.egg-info,
+    build
 max-complexity = 15
 max-line-length = 88
-extend-ignore = 
-	E203, # Black compatability: whitespace before :
-	W503, # Black compatability: line break before binary operator
+extend-ignore =
+    E203, # Black compatability: whitespace before :
+    W503, # Black compatability: line break before binary operator
 
 [mypy]
 ignore_missing_imports = True
