Update dev deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,47 +48,44 @@ console_scripts =
 
 [options.extras_require]
 cov =
-    coverage>=5.3.1
+    coverage[toml]>=5.5
     coverage-badge>=1.0.1
-    toml>=0.10.2
 dev =
-    black>=20.8b1
-    build>=0.3.1
+    black>=20.5b2
+    build>=0.4.0
     bump2version>=1.0.1
     coverage-badge>=1.0.1
-    flake8>=3.8.4
-    isort>=5.6.4
+    flake8>=3.9.2
+    isort>=5.8.0
     livereload>=2.6.3
     markdown-include>=0.6.0
-    mkdocs>=1.1.2
-    mkdocs-material>=6.2.2
-    mkdocstrings>=0.13.6
-    mypy>=0.800
-    nox>=2020.8.22
-    pre-commit>=2.12.0
-    pytest>=6.1.2
-    pytest-cov>=2.10.1
-    pytest-httpx>=0.10.1
-    pytest-mock>=3.5.1
-    twine>=3.2.0
+    mkdocs>=1.2
+    mkdocs-material>=7.1.7
+    mkdocstrings>=0.15.1
+    mypy>=0.901
+    nox>=2021.6.6
+    pre-commit>=2.13.0
+    pytest>=6.2.4
+    pytest-cov>=2.12.1
+    pytest-httpx>=0.12.0
+    pytest-mock>=3.6.1
 docs =
     livereload>=2.6.3
     markdown-include>=0.6.0
-    mkdocs>=1.1.2
-    mkdocs-material>=6.2.2
-    mkdocstrings>=0.13.6
+    mkdocs>=1.2
+    mkdocs-material>=7.1.7
+    mkdocstrings>=0.15.1
 lint =
-    black>=20.8b1
-    flake8>=3.8.4
-    isort>=5.6.4
-    mypy>=0.800
+    black>=20.5b2
+    flake8>=3.9.2
+    isort>=5.8.0
+    mypy>=0.901
 test =
-    coverage>=5.3.1
-    pytest>=6.1.2
-    pytest-cov>=2.10.1
-    pytest-httpx>=0.10.1
-    pytest-mock>=3.5.1
-    toml>=0.10.2
+    coverage[toml]>=5.5
+    pytest>=6.2.4
+    pytest-cov>=2.12.1
+    pytest-httpx>=0.12.0
+    pytest-mock>=3.6.1
 
 [options.package_data]
 typed = pytoil/py.typed
@@ -135,3 +132,6 @@ ignore_errors = True
 
 [mypy-tests.*]
 ignore_errors = True
+
+[mypy-yaml.*]
+ignore_missing_imports = True
