--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,17 +4,12 @@ repos:
     hooks:
       - id: end-of-file-fixer
       - id: check-added-large-files
+      - id: trailing-whitespace
 
   - repo: https://github.com/psf/black
-    rev: "21.5b1"
+    rev: "21.5b2"
     hooks:
       - id: black
-        language_version: python3
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.812"
-    hooks:
-      - id: mypy
         language_version: python3
 
   - repo: https://github.com/PyCQA/isort
