Add mypy pretty = True

--- a/setup.cfg
+++ b/setup.cfg
@@ -123,6 +123,7 @@ extend-ignore =
 ignore_missing_imports = True
 strict = True
 disallow_untyped_decorators = False
+pretty = True
 
 [mypy-venv.*]
 ignore_errors = True
