Add doit for project automation

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ dev =
     build>=0.4.0
     bump2version>=1.0.1
     coverage-badge>=1.0.1
+    doit>=0.33.1
     flake8>=3.9.2
     isort>=5.8.0
     livereload>=2.6.3
@@ -136,3 +137,6 @@ ignore_errors = True
 
 [mypy-yaml.*]
 ignore_missing_imports = True
+
+[mypy-dodo.*]
+ignore_errors = True
