--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ cookiecutter = "^1.7.3"
 wasabi = "^0.8.2"
 PyYAML = "^5.4.1"
 pydantic = "^1.8.2"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
