--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,14 +58,14 @@ bump2version = "^1.0.1"
 pre-commit = "^2.13.0"
 flake8 = "^3.9.2"
 isort = "^5.8.0"
-nox = "^2021.6.6"
-black = "^21.5b2"
+nox = ">=2021.6.6"
+black = ">=21.5b2"
 pytest-cov = "^2.12.1"
 coverage-badge = "^1.0.1"
-coverage = "^5.3"
+coverage = "^5.3.0"
 toml = "^0.10.2"
-mypy = "^0.902"
-mkdocs = "^1.2"
+mypy = ">=0.902"
+mkdocs = "^1.2.0"
 mkdocs-material = "^7.1.7"
 mkdocstrings = "^0.15.1"
 markdown-include = "^0.6.0"
