--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,18 +89,15 @@ omit = [
 branch = true
 
 [tool.mypy]
+files = [
+    "pytoil/**/*.py",
+    "noxfile.py",
+]
+
 ignore_missing_imports = true
 strict = true
 disallow_untyped_decorators = false
 pretty = true
-
-[[tool.mypy.overrides]]
-module = [
-    "venv.*",
-    ".venv.*",
-    "tests.*",
-]
-ignore_errors = true
 
 [[tool.mypy.overrides]]
 module = "yaml.*"
