--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,10 +5,11 @@ on: [push, pull_request]
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.8, 3.9]
 
     steps:
