Remove `is_editable` from `repo.py`.
Removed the `is_editable` checking method as in recent versions of
pip, the presence of `setup.py` is no longer required for editable
installs.

Also made mypy ignore errors in the tests as strictly typing tests
especially with mocks involved is annoying.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,3 +106,7 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = "toml.*"
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
