Add doit project automation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,10 @@ disallow_untyped_decorators = false
 pretty = true
 
 [[tool.mypy.overrides]]
+module = "dodo.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
 module = "yaml.*"
 ignore_missing_imports = true
 
