--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,16 @@
 version: 2
 
 updates:
-  - directory: "/"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: pip
+    directory: "/"
     open-pull-requests-limit: 5
-    package-ecosystem: "pip"
     rebase-strategy: auto
     allow:
-      - dependency-type: "direct"
+      - dependency-type: direct
     schedule:
-      interval: "weekly"
+      interval: weekly
