--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,8 @@ markdown-include = "^0.6.0"
 livereload = "^2.6.3"
 pytest-mock = "^3.6.1"
 pytest-httpx = "^0.12.0"
+types-PyYAML = "^5.4.3"
+types-toml = "^0.1.3"
 
 [tool.isort]
 # Added for compatability with black
