--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: weekly
+      interval: daily
 
   - package-ecosystem: pip
     directory: "/"
@@ -13,4 +13,4 @@ updates:
     allow:
       - dependency-type: direct
     schedule:
-      interval: weekly
+      interval: daily
