Included images from README in dist so it shows up on pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
+include = [
+    "docs/img/coverage.svg",
+    "docs/img/logo.png",
+]
 
 keywords = [
     "cli",
