--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ wasabi = "^0.8.2"
 PyYAML = "^5.4.1"
 pydantic = "^1.8.2"
 toml = "^0.10.2"
+rich = "^10.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
