Change dependabot from 'direct' to 'all'

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,6 @@ updates:
     open-pull-requests-limit: 5
     rebase-strategy: auto
     allow:
-      - dependency-type: direct
+      - dependency-type: all
     schedule:
       interval: daily
