--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "pytoil"
 version = "0.13.0"
 description = "CLI to automate the development workflow."
 authors = ["Tom Fleet <tomfleet2018@gmail.com>"]
+maintainers = ["Tom Fleet <tomfleet2018@gmail.com>"]
 license = "Apache Software License 2.0"
 homepage = "https://github.com/FollowTheProcess/pytoil"
 readme = "README.md"
@@ -66,9 +67,6 @@ coverage = "^5.3.0"
 mypy = ">=0.902"
 mkdocs = "^1.2.2"
 mkdocs-material = "^7.2.4"
-mkdocstrings = "^0.15.1"
-markdown-include = "^0.6.0"
-livereload = "^2.6.3"
 pytest-mock = "^3.6.1"
 pytest-httpx = "^0.12.1"
 types-PyYAML = "^5.4.6"
