--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ ignore_missing_imports = true
 strict = true
 disallow_untyped_decorators = false
 pretty = true
+disallow_subclassing_any = false
 
 [[tool.mypy.overrides]]
 module = [
