--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10.0-beta.4"]
+        python-version: ["3.8", "3.9", "3.10.0-rc.1"]
 
     steps:
       - name: Checkout Code
