--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ Documentation = "https://FollowTheProcess.github.io/pytoil/"
 [tool.poetry.dependencies]
 python = "^3.8"
 typer = {extras = ["all"], version = ">=0.3.2,<0.5.0"}
-httpx = "^0.19.0"
+httpx = {extras = ["http2"], version = ">=0.19.0,<1.0.0"}
 cookiecutter = "^1.7.3"
 wasabi = "^0.8.2"
 PyYAML = "^5.4.1"
