--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ nox = ">=2021.10.1"
 black = ">=21.8b0"
 pytest-cov = "^3.0.0"
 coverage-badge = "^1.0.1"
-coverage = "^5.5.0"
+coverage = {extras = ["toml"], version = "^5.5.0"}
 mypy = ">=0.910"
 mkdocs = "^1.2.2"
 mkdocs-material = "^7.3.0"
