--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -85,16 +85,14 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip setuptools wheel
           python3 -m pip install poetry
-          poetry install
+          python3 -m pip install nox
 
       - name: Deploy Docs to GitHub Pages
         env:
           # Use the built in CI GITHUB_TOKEN
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git remote add gh-token "https://${GITHUB_TOKEN}@github.com/FollowTheProcess/pytoil.git";
-          git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
-          poetry run mkdocs gh-deploy -v --clean --remote-name gh-token;
+          nox --non-interactive --session "deploy_docs"
 
   release:
     name: Release
