--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-keywords = [
-    "cli",
-    "python",
-    "developer-tools",
-    "automation",
-]
+keywords = ["cli", "python", "developer-tools", "automation"]
 
 [tool.poetry.scripts]
 pytoil = "pytoil.cli.root:app"
@@ -46,8 +41,8 @@ Documentation = "https://FollowTheProcess.github.io/pytoil/"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-typer = {extras = ["all"], version = ">=0.3.2,<0.5.0"}
-httpx = {extras = ["http2"], version = ">=0.19.0,<1.0.0"}
+typer = { extras = ["all"], version = ">=0.3.2,<0.5.0" }
+httpx = { extras = ["http2"], version = ">=0.19.0,<1.0.0" }
 cookiecutter = "^1.7.3"
 wasabi = ">=0.8.2,<0.10.0"
 PyYAML = ">=5.4.1,<7.0.0"
@@ -64,8 +59,8 @@ nox = ">=2021.10.1"
 black = ">=21.8b0"
 pytest-cov = "^3.0.0"
 coverage-badge = "^1.1.0"
-coverage = {extras = ["toml"], version = "^6.2"}
-mypy = ">=0.910"
+coverage = { extras = ["toml"], version = "^6.2" }
+mypy = "0.910"
 mkdocs = "^1.2.3"
 mkdocs-material = "^8.1.2"
 pytest-mock = "^3.6.1"
