--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ PyYAML = ">=5.4.1,<7.0.0"
 pydantic = "^1.8.2"
 toml = "^0.10.2"
 rich = "^10.9.0"
+thefuzz = {extras = ["speedup"], version = "^0.19.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
