--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,33 +41,33 @@ Documentation = "https://FollowTheProcess.github.io/pytoil/"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-typer = { extras = ["all"], version = ">=0.3.2,<0.5.0" }
-httpx = { extras = ["http2"], version = ">=0.19.0,<1.0.0" }
-cookiecutter = "^1.7.3"
-wasabi = ">=0.8.2,<0.10.0"
-PyYAML = ">=5.4.1,<7.0.0"
-pydantic = "^1.8.2"
-toml = "^0.10.2"
-rich = "^10.9.0"
-thefuzz = {extras = ["speedup"], version = "^0.19.0"}
+typer = { extras = ["all"], version = "0.4.0" }
+httpx = { extras = ["http2"], version = "0.19.0" }
+cookiecutter = "1.7.3"
+wasabi = "0.9.0"
+PyYAML = "6.0.0"
+pydantic = "1.8.2"
+toml = "0.10.2"
+rich = "10.16.1"
+thefuzz = { extras = ["speedup"], version = "0.19.0" }
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-bump2version = "^1.0.1"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
-nox = ">=2021.10.1"
-black = ">=21.8b0"
-pytest-cov = "^3.0.0"
-coverage-badge = "^1.1.0"
-coverage = { extras = ["toml"], version = "^6.2" }
+pytest = "6.2.5"
+bump2version = "1.0.1"
+flake8 = "4.0.1"
+isort = "5.10.1"
+nox = "2021.10.1"
+black = "21.12b0"
+pytest-cov = "3.0.0"
+coverage-badge = "1.1.0"
+coverage = { extras = ["toml"], version = "6.2.0" }
 mypy = "0.910"
-mkdocs = "^1.2.3"
-mkdocs-material = "^8.1.2"
-pytest-mock = "^3.6.1"
-pytest-httpx = "^0.13.0"
-types-PyYAML = "^6.0.1"
-types-toml = "^0.10.1"
+mkdocs = "1.2.3"
+mkdocs-material = "8.1.2"
+pytest-mock = "3.6.1"
+pytest-httpx = "0.13.0"
+types-PyYAML = "6.0.1"
+types-toml = "0.10.1"
 
 [tool.isort]
 # Added for compatability with black
