--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,22 +34,24 @@ classifiers = [
 keywords = ["cli", "python", "developer-tools", "automation"]
 
 [tool.poetry.scripts]
-pytoil = "pytoil.cli.root:app"
+pytoil = "pytoil.cli.root:main"
 
 [tool.poetry.urls]
 Documentation = "https://FollowTheProcess.github.io/pytoil/"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-typer = { extras = ["all"], version = "0.4.0" }
-httpx = { extras = ["http2"], version = "0.19.0" }
-cookiecutter = "1.7.3"
-wasabi = "0.9.0"
-PyYAML = "6.0.0"
+asyncclick = "8.0.1.3"
+anyio = "3.4.0"
+httpx = { extras = ["http2"], version = "0.21.1" }
 pydantic = "1.8.2"
-toml = "0.10.2"
+aiofiles = "0.8.0"
+PyYAML = "6.0"
+wasabi = "0.9.0"
 rich = "10.16.1"
+tomlkit = "0.8.0"
 thefuzz = { extras = ["speedup"], version = "0.19.0" }
+cookiecutter = "1.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
@@ -64,10 +66,12 @@ coverage = { extras = ["toml"], version = "6.2.0" }
 mypy = "0.910"
 mkdocs = "1.2.3"
 mkdocs-material = "8.1.3"
-pytest-mock = "3.6.1"
-pytest-httpx = "0.13.0"
+types-click = "7.1.8"
+pytest-asyncio = "0.16.0"
+pytest-httpx = "0.17.3"
+types-aiofiles = "0.7.3"
 types-PyYAML = "6.0.1"
-types-toml = "0.10.1"
+pytest-mock = "3.6.1"
 
 [tool.isort]
 # Added for compatability with black
@@ -78,8 +82,9 @@ multi_line_output = 3
 omit = [
     "*__init__.py",
     "*__main__.py",
-    "*abstract.py",
     "pytoil/cli/*",
+    "*exceptions.py",
+    "pytoil/environments/base.py",
     "pytoil/starters/base.py",
 ]
 branch = true
