--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,3 +88,15 @@ omit = [
     "pytoil/starters/base.py",
 ]
 branch = true
+
+[tool.mypy]
+files = ["pytoil/**/*.py", "noxfile.py"]
+ignore_missing_imports = true
+strict = true
+pretty = true
+disallow_untyped_decorators = false
+plugins = "pydantic.mypy"
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
