--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ rich = "10.16.2"
 tomlkit = "0.8.0"
 thefuzz = { extras = ["speedup"], version = "0.19.0" }
 cookiecutter = "1.7.3"
+virtualenv = "20.13.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
