--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ types-aiofiles = "0.8.1"
 types-PyYAML = "6.0.2"
 pytest-mock = "3.6.1"
 flake8-bugbear = "21.11.29"
-pre-commit = "^2.16.0"
+pre-commit = "2.16.0"
 
 [tool.isort]
 # Added for compatibility with black
