--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 21.12b0
     hooks:
       - id: black
+        args: ["--experimental-string-processing"]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
