Update docs with recent changes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,3 +60,10 @@ repos:
     hooks:
       - id: python-check-blanket-noqa
       - id: python-use-type-annotations
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      - id: codespell
+        args:
+          - "-L Ines,ines"
