--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,8 +31,18 @@ theme:
   feature:
     tabs: true
   palette:
-    primary: blue grey
-    accent: blue
+    - scheme: default
+      primary: blue grey
+      accent: blue
+      toggle:
+        icon: material/lightbulb-outline
+        name: Dark mode
+    - scheme: slate
+      primary: blue grey
+      accent: blue
+      toggle:
+        icon: material/lightbulb-outline
+        name: Light mode
 markdown_extensions:
   - codehilite
   - pymdownx.highlight:
