--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,7 @@ repos:
         additional_dependencies:
           - "types-aiofiles"
           - "types-PyYAML"
+          - "pydantic"
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
