--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ thefuzz = { extras = ["speedup"], version = "0.19.0" }
 cookiecutter = "1.7.3"
 virtualenv = "20.13.0"
 pydantic = "1.9.0"
+humanize = "3.13.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
