--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ types-PyYAML = "6.0.3"
 pytest-mock = "3.6.1"
 flake8-bugbear = "22.1.11"
 pre-commit = "2.16.0"
+freezegun = "1.1.0"
 
 [tool.isort]
 # Added for compatibility with black
