--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.20.0
+current_version = 0.19.0
 commit = True
 tag = True
 
@@ -7,6 +7,6 @@ tag = True
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:pyproject.toml]
-search = version = "{current_version}"
-replace = version = "{new_version}"
+# [bumpversion:file:pyproject.toml]
+# search = version = "{current_version}"
+# replace = version = "{new_version}"
