--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,3 +6,7 @@ tag = True
 [bumpversion:file:pytoil/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
