--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ httpx-cache = "0.4.0"
 pytest = "6.2.5"
 bump2version = "1.0.1"
 flake8 = "4.0.1"
+flake8-bugbear = "22.1.11"
+flake8-comprehensions = "3.8.0"
 isort = "5.10.1"
 nox = "2022.1.7"
 black = "21.12b0"
@@ -75,7 +77,6 @@ pytest-httpx = "0.18.0"
 types-aiofiles = "0.8.3"
 types-PyYAML = "6.0.3"
 pytest-mock = "3.6.1"
-flake8-bugbear = "22.1.11"
 pre-commit = "2.17.0"
 freezegun = "1.1.0"
 
