--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,14 +37,14 @@ repos:
     rev: v1.3.0
     hooks:
       - id: yesqa
-        additional_dependencies: &flake8-dependencies
-          - flake8-bugbear
 
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
       - id: flake8
-        additional_dependencies: *flake8-dependencies
+        additional_dependencies:
+          - flake8-bugbear
+          - flake8-comprehensions
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.931
