--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: "22.1.0"
     hooks:
       - id: black
-        args: ["--experimental-string-processing"]
+        args: ["--preview"]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
@@ -23,7 +23,7 @@ repos:
         args: [--py39-plus]
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: "5.10.1"
     hooks:
       - id: isort
 
@@ -70,7 +70,7 @@ repos:
           - "-L Ines,ines"
 
   - repo: https://github.com/PyCQA/bandit
-    rev: "1.7.1"
+    rev: "1.7.2"
     hooks:
       - id: bandit
         args:
