--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ flake8-bugbear = "22.1.11"
 flake8-comprehensions = "3.8.0"
 isort = "5.10.1"
 nox = "2022.1.7"
-black = "21.12b0"
+black = "22.1.0"
 pytest-cov = "3.0.0"
 coverage-badge = "1.1.0"
 coverage = { extras = ["toml"], version = "6.3" }
@@ -83,7 +83,6 @@ freezegun = "1.1.0"
 [tool.isort]
 # Added for compatibility with black
 profile = "black"
-multi_line_output = 3
 
 [tool.coverage.run]
 omit = [
