--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -122,7 +122,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [test, lint, docs, publish-docs]
+    needs: [test, lint, docs, publish-docs, codecov]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
       - name: Checkout Code
