--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ types-PyYAML = "6.0.4"
 pytest-mock = "3.7.0"
 pre-commit = "2.17.0"
 freezegun = "1.1.0"
+pytest-clarity = "1.0.1"
 
 [tool.isort]
 # Added for compatibility with black
