Fix lint errors

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,6 +68,8 @@ repos:
       - id: codespell
         args:
           - "-L Ines,ines"
+          - "--skip"
+          - "*.svg"
 
   - repo: https://github.com/PyCQA/bandit
     rev: "1.7.2"
