--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ pytest-mock = "3.7.0"
 pre-commit = "2.17.0"
 freezegun = "1.1.0"
 pytest-clarity = "1.0.1"
+pip-audit = "2.0.0"
 
 [tool.isort]
 # Added for compatibility with black
