--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ flake8-bugbear = "22.3.23"
 flake8-comprehensions = "3.8.0"
 isort = "5.10.1"
 nox = "2022.1.7"
-black = "22.1.0"
+black = "22.3.0"
 pytest-cov = "3.0.0"
 coverage = { extras = ["toml"], version = "6.3.2" }
 mypy = "0.942"
@@ -80,7 +80,7 @@ pytest-mock = "3.7.0"
 pre-commit = "2.17.0"
 freezegun = "1.2.1"
 pytest-clarity = "1.0.1"
-pip-audit = "2.1.0"
+pip-audit = "2.1.1"
 
 [tool.isort]
 # Added for compatibility with black
@@ -122,4 +122,4 @@ all = true
 no_gitignore = false
 
 [tool.bandit]
-skips = ["B106"]
+skips = ["B105", "B106"]
