--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,12 @@ repos:
     hooks:
       - id: isort
 
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v1.2.5
+    hooks:
+      - id: pycln
+        args: [--all]
+
   - repo: https://github.com/asottile/yesqa
     rev: v1.3.0
     hooks:
