Use pytest-randomly to randomise test order

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ pytest-httpx = "0.20.0"
 types-aiofiles = "0.8.8"
 types-PyYAML = "6.0.7"
 pytest-mock = "3.7.0"
+pytest-randomly = "3.11.0"
 pre-commit = "2.18.1"
 freezegun = "1.2.1"
 pytest-clarity = "1.0.1"
