--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ exclude_lines = ["# pragma: no cover", "def __repr__"]
 
 [tool.mypy]
 files = ["pytoil/**/*.py", "noxfile.py"]
+python_version = "3.9"
 ignore_missing_imports = true
 strict = true
 pretty = true
